# spec-code-ai-mapper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Constitution.md  README.md  README_ja.md  SECURITY.md  dev.ecosystem.config.js  docker-compose.yml  ecosystem.config.js  pyproject.toml  spec.md
add-line-numbers/: CHANGELOG.md  README.md  (+3 more)
code2map/: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  README.md  README_ja.md  SECURITY.md  SECURITY_ja.md  __init__.py  pyproject.toml
code2map/.github/workflows/: ci.yml
code2map/code2map/parsers/: java_parser.py
code2map/docs/: 20260127impliment-plan.md  20260225-sanitize-filename.md  20260311-java-parse-error-message.md
code2map/docs/examples/: README.md
code2map/docs/examples/java/output/: INDEX.md  MAP.json
code2map/docs/examples/java/output/parts/: UserAlreadyExistsException.class.java  UserManagementService_findByEmailDomain.java  UserManagementService_findUserOrThrow.java  UserManagementService_updateUser.java  UserManagementService_validateUserName.java  UserNotFoundException.class.java  UserNotFoundException_init.java  User_getAge.java
code2map/docs/examples/python/output/parts/: UserManagementService_find_by_email_domain.py
code2map/docs/examples/v0.1.2/python/: user_management_service.py
code2map/docs/examples/v0.1.2/python/output/: MAP.json
code2map/docs/examples/v0.2.0/java/: UserManagementService.java
code2map/docs/examples/v0.2.0/java/output/: INDEX.md  MAP.json
code2map/docs/tests/: scenarios.md
code2map/docs/tests/results/: 20260226-1700-review.md  20260226-1800-scenario.md  20260312-release-review.md
code2map/tests/: test_java_parser.py  test_python_parser.py
code2map/tests/fixtures/: java_syntax_error.java  syntax_error.py
code2map/versions/: README.md
code2map/versions/v0.1.1/code2map/generators/: index_generator.py  parts_generator.py
code2map/versions/v0.1.1/code2map/parsers/: base_parser.py
code2map/versions/v0.1.2/: spec.md
code2map/versions/v0.1.2/code2map/: __init__.py
code2map/versions/v0.1.2/code2map/parsers/: java_parser.py
code2map/versions/v0.1.2/code2map/utils/: file_utils.py
code2map/versions/v0.1.2/tests/fixtures/: function_only.py  sample.py
code2map/versions/v0.1.3/: pyproject.toml
code2map/versions/v0.1.3/code2map/: __init__.py  cli.py
code2map/versions/v0.1.3/code2map/utils/: logger.py
code2map/versions/v0.1.3/tests/: test_edge_cases.py
code2map/versions/v0.1.3/tests/fixtures/: empty.py  large_file.py  sample.txt
md2map/: CHANGELOG.md  CHANGELOG_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  LICENSE  README.md  README_ja.md  SECURITY.md  SECURITY_ja.md  cli.py  pyproject.toml  spec.md
md2map/.github/workflows/: ci.yml
md2map/add-line-numbers/: CHANGELOG.md  CONTRIBUTING.md  README.md  README_ja.md  SECURITY.md
md2map/docs/: 20260203implementation-plan.md  20260218enhancement_plan.md  20260218semantic_mapping_proposal.md  20260311-ai-subsplit-prompt-customization-plan.md
md2map/docs/assets/: example.key
md2map/docs/examples/: 20260121AIオーディター形式サンプルコーディング規約.md
md2map/docs/examples/output/: INDEX.md
md2map/docs/examples/output/parts/: 設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_命名規則全般（1）.md
md2map/docs/examples/v0.1/output/: MAP.json
md2map/docs/examples/v0.1/output/parts/: 設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧.md
md2map/docs/examples/v0.2/: 20260218サンプルコーディング規約.md
md2map/docs/examples/v0.2/output-ai/: INDEX.md  MAP.json
md2map/docs/examples/v0.2/output-ai/parts/: 設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_コーディング・コメント・テストに関するガイドライン.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_コーディング規約一覧_part-1.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_コーディング規約一覧_part-3.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_コーディング規約一覧_コーディング・コメント・テスト規約.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_コーディング規約一覧_セキュリティ規約.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_セキュリティに関するガイドライン.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_コーディング規約一覧_補足.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_命名規則クラス（1）.md  設計書_20260121AIオーディター形式サンプルコーディング規約.xlsx_命名規則クラス（1）_メソッド名のプレフィックス使い分けガイド.md  (+4 more)
md2map/docs/examples/v0.2/output-heading/: INDEX.md
md2map/docs/examples/v0.2/output-nlp/: INDEX.md
md2map/docs/examples/v0.3.1/: headings.json
md2map/docs/examples/v0.3/output-heading/: MAP.json
md2map/llm/: bedrock_provider.py  openai_provider.py
md2map/md2map/generators/: index_generator.py
md2map/md2map/llm/: base_provider.py  config.py  factory.py
md2map/md2map/parsers/: markdown_parser.py
md2map/models/: section.py
md2map/parsers/: base_parser.py
md2map/tests/: test_generators.py  test_llm.py  test_markdown_parser.py
md2map/tests/fixtures/: japanese.md  simple.md  with_code.md
md2map/versions/: README.md
md2map/versions/ v0.1.0/: main.py
md2map/versions/ v0.1.0/md2map/generators/: map_generator.py
md2map/versions/ v0.1.0/md2map/parsers/: markdown_parser.py
md2map/versions/ v0.1.0/md2map/utils/: logger.py
md2map/versions/ v0.1.0/tests/: test_cli.py
md2map/versions/v0.2.0/: spec.md
md2map/versions/v0.2.0/md2map/generators/: parts_generator.py
md2map/versions/v0.2.0/md2map/llm/: __init__.py
md2map/versions/v0.2.0/md2map/models/: __init__.py  section.py
md2map/versions/v0.2.0/md2map/parsers/: __init__.py
md2map/versions/v0.2.0/md2map/utils/: file_utils.py
md2map/versions/v0.2.0/tests/: test_cli.py  test_generators.py
md2map/versions/v0.3.0/: pyproject.toml
md2map/versions/v0.3.0/md2map/llm/: anthropic_provider.py
md2map/versions/v0.3.0/tests/fixtures/: edge_cases.md  nested.md
versions/v0.1.2/: pyproject.toml
versions/v0.1.2/code2map/generators/: parts_generator.py
versions/v0.1.2/code2map/models/: symbol.py
versions/v0.8.0/backend/: pyproject.toml
versions/v0.8.0/backend/app/models/: schemas.py
versions/v0.8.0/backend/app/routers/: review.py  split.py
versions/v0.8.0/backend/app/services/: bedrock_service.py
versions/v0.8.0/backend/tests/: test_review_split.py  test_split.py
(+214 files in other folders)
